--- a/SDCEventTracker/Views/Home/Competitions.cshtml
+++ b/SDCEventTracker/Views/Home/Competitions.cshtml
@@ -9,7 +9,7 @@
         <div class="input-group">
             <input type="text" class="form-control">
             <span class="input-group-btn">
-                <button class="btn btn-default" type="button">Go!</button>
+                <button class="btn btn-success" type="button"><i class="fa fa-search" style="color: white; padding: 3px 0;"></i></button>
             </span>
         </div>
     </div>
