--- a/SDCEventTracker/Views/Home/Competitions.cshtml
+++ b/SDCEventTracker/Views/Home/Competitions.cshtml
@@ -5,11 +5,11 @@
 <button type="button" class="btn btn-info">@Html.ActionLink("Submit New Hunt", "Create")<i class="fa fa-file-text-o"></i></button>
 
 <div class="container">
-    <div class="col-md-3 col-md-offset-9">
+    <div class="col-md-3 col-md-offset-9 col-sm-3 col-sm-offset-9">
         <div class="input-group">
             <input type="text" class="form-control">
             <span class="input-group-btn">
-                <button class="btn btn-danger" type="button"><i class="fa fa-search" style="color: white; padding: 3px 0;"></i></button>
+                <button class="btn btn-success" type="button"><i class="fa fa-search" style="color: white; padding: 3px 0;"></i></button>
             </span>
         </div>
     </div>
