--- a/SDCEventTracker/Views/Home/Create.cshtml
+++ b/SDCEventTracker/Views/Home/Create.cshtml
@@ -45,7 +45,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.State, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.State, new SelectList( new List<Object>{  new {value=0, text=""}, new { value = "LA" , text = "Louisiana"  }, new { value = "TX" , text = "Texas" }, new { value = "CA" , text = "California"}}, "value", "text", 1), new {@class = "form-control" })
+                @Html.DropDownListFor(model => model.State, new SelectList( new List<Object>{  new {value=0, text=""}, new { value = "LA" , text = "Louisiana"  }, new { value = "TX" , text = "Texas" }, new { value = "CA" , text = "California"}, new { value = "GA" , text = "Georgia"}}, "value", "text", 1), new {@class = "form-control" })
                 @*Html.TextBoxFor(model => model.State, new { @class = "form-control" })*@
                 @Html.ValidationMessageFor(model => model.State)
                 
