--- a/SDCEventTracker/Views/Home/Competitions.cshtml
+++ b/SDCEventTracker/Views/Home/Competitions.cshtml
@@ -20,6 +20,7 @@
 @*using (Html.BeginForm("Competetion", "Home", FormMethod.Get)){
     @Html.TextBox("searchString") <input type="submit" value="Search" />
     }*@
+
 <div class="event-table">
     <table class="table">
         <tr id="top-row">
@@ -42,15 +43,20 @@
 
         @foreach (var item in Model)
         {
-
-            <tr>
+            // Colors the past hunt grey, bold and blacks the future hunts
+            var style = "color: black; font-weight: bold;";
+            if (item.Date < DateTime.Now){
+               style = "color: grey;";
+            }
+            
+            <tr style="@style">
                 <td>
                     @Html.DisplayFor(modelItem => item.EventName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Date)
                 </td>
-                <td style="text-transform: capitalize;">
+                <td>
                     @Html.DisplayFor(modelItem => item.Location)
                 </td>
                 <td>
