--- a/SDCEventTracker/Content/css/styles.css
+++ b/SDCEventTracker/Content/css/styles.css
@@ -111,3 +111,10 @@ button a, button a:hover, button a:active {
 .table tr{
     text-transform: capitalize;
 }
+
+.shadow{
+    -webkit-box-shadow: 8px 7px 22px 2px rgba(41,41,41,1);
+-moz-box-shadow: 8px 7px 22px 2px rgba(41,41,41,1);
+box-shadow: 8px 7px 22px 2px rgba(41,41,41,1);
+
+}
