EventDetails working, with Yes No answers for events being held

--- a/SDCEventTracker/Content/css/styles.css
+++ b/SDCEventTracker/Content/css/styles.css
@@ -1,78 +1,3 @@
-/* Bootsnipp search bar */
-#custom-search-form {
-    margin: 0;
-    margin-top: 5px;
-    padding: 0;
-}
-
-    #custom-search-form .search-query {
-        padding-right: 3px;
-        padding-right: 4px \9;
-        padding-left: 3px;
-        padding-left: 4px \9;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-        -webkit-transition: width 0.2s ease-in-out;
-        -moz-transition: width 0.2s ease-in-out;
-        -o-transition: width 0.2s ease-in-out;
-        transition: width 0.2s ease-in-out;
-    }
-
-    #custom-search-form button {
-        border: 0;
-        background: none;
-        /** belows styles are working good */
-        padding: 2px 5px;
-        margin-top: 2px;
-        position: relative;
-        left: -28px;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-    }
-/*End Bootsnip search bar */
-
-#header { /* Header of each page */
-    font-family: Times;
-}
-
-#bt-search-btn { /* green search button, index.php */
-    margin-left: 5px;
-}
-
-.btn { /* the Event, Region, and Year button */
-    margin-right: 2%;
-}
-
-.table { /* The overall tabling use */
-    margin-top: 2%;
-}
-
-.error { /* required red */
-    color: #FF0000;
-}
-
-.fa-search {
-    padding-left: 10%;
-}
-
-.sr_button {
-    padding-right: 5%;
-    padding-left: 5%;
-}
-
-.checks {
-    margin-top: 3%;
-}
-
-input {
-    display: inline;
-}
 
 .btn-info a,
 .btn-info a:hover,
@@ -108,13 +33,16 @@ button a, button a:hover, button a:active {
     background-color: #AA7439 !important;
 }
 
-.table tr{
+.table tr {
     text-transform: capitalize;
 }
 
-.shadow{
-    -webkit-box-shadow: 8px 7px 22px 2px rgba(41,41,41,1);
--moz-box-shadow: 8px 7px 22px 2px rgba(41,41,41,1);
-box-shadow: 8px 7px 22px 2px rgba(41,41,41,1);
+.shadow {
+    -webkit-box-shadow: 8px 7px 52px -5px rgba(41,41,41,1);
+    -moz-box-shadow: 8px 7px 52px -5px rgba(41,41,41,1);
+    box-shadow: 8px 7px 52px -5px rgba(41,41,41,1);
+}
 
+button a:hover, button a{
+    color: #FFFFFF;
 }
