--- a/SDCEventTracker/Views/Shared/_Layout.cshtml
+++ b/SDCEventTracker/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
     </table>
 
     <!-- Small button group -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="height: 0;">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
