Splitting tables for each Event is working. The event name is also displayed at the top of the table.

--- a/SDCEventTracker/Content/css/styles.css
+++ b/SDCEventTracker/Content/css/styles.css
@@ -29,7 +29,7 @@ button a, button a:hover, button a:active {
     background-color: #ffd800 !important;
 }
 
-#top-row:hover {
+.top-row, .table .top-row:hover {
     background-color: #AA7439 !important;
 }
 
