--- a/SDCEventTracker/Views/Home/Competitions.cshtml
+++ b/SDCEventTracker/Views/Home/Competitions.cshtml
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="event-table col-md-12">
             <table class="table">
-                <tr id="top-row">
+                <tr class="top-row">
                     <th>
                         @Html.DisplayNameFor(model => model.EventName)
                     </th>
