--- a/SDCEventTracker/Views/Home/EventDetails.cshtml
+++ b/SDCEventTracker/Views/Home/EventDetails.cshtml
@@ -70,6 +70,9 @@
     <div class="col-md-2 pull-right">
         <button type="button" class="btn btn-default">@Html.ActionLink("Back to Competitions", "Competitions")<i class="fa fa-home"></i></button>
     </div>
+    <div class="col-md-2 pull-right">
+        <button type="button" class="btn btn-success">@Html.ActionLink("Submit Results", "SubmitResults?id=" + Model.ID)<i class="fa fa-home"></i></button>
+    </div>
 </div>
 
 @* YesNo(bool) produces "Yes" or "No" wether or not  *@
