--- a/SDCEventTracker/Views/Home/SubmitResults.cshtml
+++ b/SDCEventTracker/Views/Home/SubmitResults.cshtml
@@ -2,10 +2,10 @@
 
 <h2>@ViewBag.Title</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Result</h4>
         <hr />
@@ -14,7 +14,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EventType, "EventType", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.EventType, ViewBag.EventTypes, new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.EventType, new SelectList(new List<Object> { new { value = 1, text = "Morning Hunt" }, new { value = 2, text = "Evening Hunt" }, new { value = 3, text = "Barking Contest" }, new { value = 4, text = "Bench Show" } }, "value", "text", 1), new { @class = "form-control" })
+                @*@Html.DropDownListFor(model => model.EventType, ViewBag.EventTypes, new { @class = "form-control" })*@
                 @Html.ValidationMessageFor(model => model.EventType)
             </div>
         </div>
@@ -30,7 +31,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.HandlerID, "HandlerID", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("HandlerID", ViewBag.HandlerNames as SelectList)
+                @Html.EditorFor(model => model.HandlerID)
+                @*@Html.DropDownList("HandlerID", ViewBag.HandlerNames as SelectList)*@
                 @Html.ValidationMessageFor(model => model.HandlerID)
             </div>
         </div>
@@ -38,19 +40,25 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DogID, "DogID", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("DogID", ViewBag.DogNames as SelectList)
-)
+                @*@Html.DropDownList("DogID", ViewBag.DogNames as SelectList)*@
+                @Html.EditorFor(model => model.DogID)
                 @Html.ValidationMessageFor(model => model.DogID)
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Submit Place" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
+
+<div class="col-md-2 pull-right">
+    <button type="button" class="btn btn-default">@Html.ActionLink("Back to Competitions", "Competitions")<i class="fa fa-home"></i></button>
+</div>
+
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
