--- a/SDCEventTracker/Views/Home/EventResults.cshtml
+++ b/SDCEventTracker/Views/Home/EventResults.cshtml
@@ -153,3 +153,6 @@
 <div class="col-md-2 pull-right">
     <button type="button" class="btn btn-default">@Html.ActionLink("Back to Competitions", "Competitions")<i class="fa fa-home"></i></button>
 </div>
+<div class="col-md-2 pull-right">
+    <button type="button" class="btn btn-success">@Html.ActionLink("Submit More Results", "SubmitResults", new { id = ViewBag.EventID })</button>
+</div>
