--- a/SDCEventTracker/Views/Home/SubmitResults.cshtml
+++ b/SDCEventTracker/Views/Home/SubmitResults.cshtml
@@ -57,8 +57,9 @@
 <div class="col-md-2 pull-right">
     <button type="button" class="btn btn-default">@Html.ActionLink("Back to Competitions", "Competitions")<i class="fa fa-home"></i></button>
 </div>
-
-
+<div class="col-md-2 pull-right">
+    <button type="button" class="btn btn-success">@Html.ActionLink("View Results", "EventResults", new { id = ViewBag.EventID })<i class="fa fa-home"></i></button>
+</div>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
