--- a/SDCEventTracker/Views/Home/EventDetails.cshtml
+++ b/SDCEventTracker/Views/Home/EventDetails.cshtml
@@ -22,7 +22,7 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.City), @Html.DisplayFor(model => model.State)
+                @Html.DisplayFor(model => model.City), @Html.DisplayFor(model => model.State) - @Html.DisplayFor(model => model.Zip)
             </dd>
 
             <dt>
